2008-05-03 16:18  dezperado

	* : Fixed the negation '!' operator behaviour and added tests to
	  sanity.fim.
	  Implemented a regular expressions matching operator '=~'.
	  Now unquoted strings can be passed as arguments to fim commands,
	  as long as they are quite simple and resemble a simple file name
	  (FILE_PATH token).
	  Implemented the --write-scriptout (-W) option and fixed some
	  broken recording issues.
	  fim -V will print repository version, too .
	  Corrected incorrect regcomp() calls, which triggered error only
	  on -1 return values.
	  Corrected a bit the rc file sequence: ~.fimrc first, /etc/fimrc
	  otherwise.
	  New default key bindings for window handlings.
	  Updated man page and FIM.TXT.
	  Corrected a {;; } related problem for the FIM_ITERATED_COMMANDS
	  functionality.

2008-04-30 14:59  dezperado

	* : Implemented the prodrome of the forthcoming custom output
	  devices: AADevice, a driver for aalib (ascii art) based output.

2008-04-15 16:58  dezperado

	* : Small changes to make the -Weffc++ less dreadful.
	  Introduced the (unfinished) cron-build.sh.in, to be run on remote
	  hosts willing to test fim building.

2008-04-14 18:48  dezperado

	* : Big optimizations and speedup in magnifying pictures through
	  loop unrollings, and a 20% improvement in dithering handling, in
	  convert_line().

2008-04-11 19:56  dezperado

	* : Unrolled the magnifying loop in op_resize_work : now we magnify
	  50% and more faster.

2008-04-08 14:20  dezperado

	* : Adapted the code to tun on a gentoo Linux powerpc machine.
	  Fixed a bug using getopt_long causing segmentation fault there in
	  fim.cpp.
	  Added a new example script : scripts/utilities/fimscan.sh
	  Updated a little the documentation regarding external scripting
	  (like fimscan.sh).

2008-03-25 18:08  dezperado

	* : Some less extern references.
	  Improved a little the image magnification code: better for big
	  magnifications.

2008-03-22 16:04  dezperado
