@@ -22,6 +22,8 @@ ongoing further inspiration.
 	Current development directions
 
 
+20080505	cleanup up completely the textual driver exiting
+20080505	on 64 bit architectures, problems arise because pointer arithmetics will return long int's instead of ints
 20080504	add an interface to modify key_bindings from within fim
 20080504	document and promote the advantages of adaptive 'steps' variable
 20080504	the ascale + resize + rotation combination could be messy
